i have to switch to using sysfs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,63 @@
         "list": "c",
         "iosfwd": "cpp",
         "iomanip": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "algorithm": "c",
+        "array": "c",
+        "bit": "c",
+        "cassert": "c",
+        "cctype": "c",
+        "cerrno": "c",
+        "cfloat": "c",
+        "charconv": "c",
+        "climits": "c",
+        "clocale": "c",
+        "cmath": "c",
+        "compare": "c",
+        "concepts": "c",
+        "cstdarg": "c",
+        "cstddef": "c",
+        "cstdint": "c",
+        "cstdio": "c",
+        "cstdlib": "c",
+        "cstring": "c",
+        "ctime": "c",
+        "cwchar": "c",
+        "cwctype": "c",
+        "deque": "c",
+        "map": "c",
+        "string": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "exception": "c",
+        "functional": "c",
+        "iterator": "c",
+        "memory": "c",
+        "memory_resource": "c",
+        "optional": "c",
+        "random": "c",
+        "ratio": "c",
+        "string_view": "c",
+        "system_error": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "format": "c",
+        "initializer_list": "c",
+        "ios": "c",
+        "istream": "c",
+        "limits": "c",
+        "locale": "c",
+        "new": "c",
+        "numbers": "c",
+        "ostream": "c",
+        "queue": "c",
+        "span": "c",
+        "stdexcept": "c",
+        "streambuf": "c",
+        "cinttypes": "c",
+        "cstdbool": "c",
+        "variant": "c",
+        "version": "c"
     }
 }
